<resources>
    <string name="app_name">Logica App</string>
    <string name="title">Conjunction (AND)</string>
    <string name="valueA">A</string>
    <string name="valueB">B</string>
    <string name="valueCombined">A^B</string>
    <string name="valT">T</string>
    <string name="valF">F</string>
    <string name="check">Check</string>
    <string name="correct">The correct number of answers is: %d</string>
    <string name="incorrect">Thats a yikes big homie</string>
</resources>
